--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "js"
   ],
   "author": "Valentin Degenne <vdegenne@gmail.com>",
-  "license": "MIT",
+  "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/vdegenne/vcms-quick-starter/issues"
   },
@@ -27,7 +27,18 @@
   "devDependencies": {
     "fs-extra": "^4.0.1",
     "gulp": "^3.9.1",
+    "gulp-filter": "^5.0.1",
+    "gulp-if": "^2.0.2",
+    "gulp-replace": "^0.6.1",
+    "map-stream": "^0.0.7",
     "merge-stream": "^1.0.1",
-    "run-sequence": "^2.1.0"
-  }
+    "mkdirp": "^0.5.1",
+    "polymer-build": "^2.0.0",
+    "polymer-micro-build-toolbox": "^1.0.1",
+    "run-sequence": "^2.1.0",
+    "through2": "^2.0.3",
+    "vinyl": "^2.1.0",
+    "vinyl-fs": "^2.4.4"
+  },
+  "dependencies": {}
 }
