--- a/src/package.json
+++ b/src/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "install": "yarn install && cd src && bower install"
+    "pre-build": "yarn install && bower install"
   },
   "author": "my name",
-  "license": "MIT",
+  "license": "BSD-3-Clause",
   "devDependencies": {
     "browser-sync": "^2.18.13",
-    "gulp": "^3.9.1"
+    "fs-extra": "^4.0.1",
+    "gulp": "^3.9.1",
+    "gulp-if": "^2.0.2",
+    "gulp-replace": "^0.6.1",
+    "mkdirp": "^0.5.1",
+    "polymer-micro-build-toolbox": "^1.0.1",
+    "run-sequence": "^2.1.0"
   }
 }
