--- a/src/src/project.json
+++ b/src/src/project.json
@@ -1,6 +1,6 @@
 {
     "name": "vcms-project-starter",
-
     "env": "dev",
-    "credentials_file": "<credentials_direpath_here>"
+
+    "db-credentials-search-paths": ["C:/localweb/includes/vcms"]
 }
